Version 1.8.0
-------------------------------------------------------------
30 September 2008
+ Added csv to blog
+ Updated: templates/list.tpl

10 September 2008
+ Added ability to purge old blog entries.
+ Updated: templates/purge_confirm.tpl

13 August 2008
+ RSS feed now appears when all blog entries are shown not just one.

12 August 2008
+ Pager date format separated from blog view date format
+ Made some adjustments for new mod_rewrite format.
+ Changed over admin links to icons.
+ Updated: conf/config.php, img/*

1 August 2008
+ Removed old mod_rewrite code.

24 June 2008
+ Fixed create date display bug

19 June 2008
+ The "Posted on" date is now the publish date, not the created date

18 June 2008
+ Added setRequired to title of blog

13 June 2008
+ Added cacheQueries to blog listing.

11 June 2008
+ Using new Layout cacheHeaders function
+ Dropping addStyle for filecabinet

Version 1.7.2
----------------------------------------------------------------
6 June 2008
+ Added js_calender to publish and expire

4 June 2008
+ Fixed forward message when entry creation encounters an error

26 May 2008
+ Removed redundant page tags from blog listing.

23 April 2008
+ Blog uses new dbpager sorting headers.
+ Lets you use new comments approval.
+ Fixed bug with setting allow anonymous submissions.
+ Updated: templates/edit.tpl, templates/list.tpl,
  templates/settings.tpl


17 April 2008
+ Fixed notice warning.
+ Re-added ability to limit folder view by module.

8 April 2008
+ Can use media or image thumbnails on blog listing page.
+ Blog uses new key datetime terminators.
+ File Cabinet style sheet called regardless of cache.
+ Indicators added for published status.
+ Updated: templates/style.css. templates/view.tpl

Version 1.7.1
----------------------------------------------------------------
19 March 2008
+ Fixed update note. Thanks Verdon.

17 March 2008
+ Update was missing parameter when copying templates.

14 March 2008